# lab1

./: CMakeLists.txt
src/: CMakeLists.txt  Project.h  func.h  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5_func.cpp  task5_main.cpp  task6_func.cpp  task6_main.cpp  task7_func.cpp  task7_main.cpp
