add_executable (task1 task1.cpp)
add_executable (task2 task2.cpp)
add_executable (task3 task3.cpp)
add_executable (task4 task4.cpp)
add_executable (task5_main task5_main.cpp)
add_executable (task5_func task5_func.cpp)
add_executable (task5 task5_main.cpp task5_func.cpp)
add_executable (task6_main task6_main.cpp)
add_executable (task6_func task6_func.cpp)
add_executable (task6 task6_main.cpp task6_func.cpp)
add_executable (task7_main task7_main.cpp)
add_executable (task7_func task7_func.cpp)
add_executable (task7 task7_main.cpp task7_func.cpp)